--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webserver2": "^0.9.2",
+    "html-to-image": "^0.1.1",
     "node-sass": "^4.14.1"
   },
   "scripts": {
-    "dev:build": "gulp dev",
+    "start": "gulp dev",
     "deploy": "gulp deploy"
   }
 }
